# rasterize

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/ssr/: camera.hpp  material.hpp  math.hpp  mesh.hpp  object.hpp  rasterizer.hpp  scene.hpp
source/: camera.cpp  main.cpp  material.cpp  mesh.cpp  object.cpp  rasterizer.cpp
